:bug: Fixed preloader icon bug on Firefox

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -134,8 +134,9 @@
     content: '';
     display: inline-block;
     position: relative;
-    width: 35px;
-    height: 35px;
+    width: 36px;
+    height: 36px;
+    box-sizing: border-box;
     border-width: 5px;
     border-style: solid;
     border-color: rgba(0, 0, 0, .5) rgba(0, 0, 0, .5) rgba(0, 0, 0, .5) rgba(255, 255, 255, .5);
